# zk-snarks

./: .gitignore  Cargo.toml  README.MD  notes.txt
old_code/: main copy.rs  qap.rs  r1cs.rs
src/: main.rs
src/circuits/: mod.rs  parser.rs  r1cs.rs
src/circuits/circuit/: circuit.rs  mod.rs
src/circuits/errors/: errors.rs  mod.rs
src/circuits/indexed_map/: indexed_map.rs  mod.rs
src/circuits/sample_circuits/: circuit1.json  circuit2.json
src/ecc/: finite_field.rs
src/r1cs/: r1cs.rs
src/sample_circuits/: circuit1.json
src/utils/polynomial/: mod.rs  polynomial.rs
src/zk_proof/: mod.rs  polynomial.rs  qap.rs
src/zk_proofs/: mod.rs  qap.rs
