[package]
name = "zk-cache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }

serde_json = "1.0"
polynomial = "0.2.6"
elliptic-curve = "0.13.8"
k256 = "0.13.3"
rand = "0.8.5"
thiserror = "1.0.56"